--- a/css/styles.css
+++ b/css/styles.css
@@ -3,19 +3,29 @@
     box-sizing: border-box;
   }
     
+  html {
+    font: Arial;
+  }
+
   body {
     margin: 0;
     padding: 0;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    color: #222;
-    background: #f7f5f0;
+    font-family: Arial, Helvetica, sans-serif;
   }
-  /* Link Styles */
+
+
+  header {
+    background-color:gray;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+  }
+
+  /*Links*/
   
-  a {
-    text-decoration: none;
-    color: #0499ff;
+  a:visited {
+    color: white;
   }
   a:hover {
     color: #6633ff;
@@ -24,97 +34,41 @@
   /* Section Styles */
   
   .main-nav {
+    display: flex;
     width: 100%;
-    background: black;
-    min-height: 30px;
-    padding: 10px;
-    position: fixed;
     text-align: center;
   }
-  .nav {
-    display: flex;
-    justify-content: space-around;
-    font-weight: 700;
-    list-style-type: none;
-    margin: 0 auto;
-    padding: 0;
-  }
-  .nav .name {
-    display: none;
-  }
-  .nav li {
-    padding: 5px 10px 10px 10px;
-  }
+  .nav-logo {
+  max-width: 200px;
+  max-height: 200px;
+  flex-grow: 1;
+}
+  
+  .main-nav li {
+    border-radius: 6px;
+    box-shadow: 2px 2px 5px 2px white;
+    inset: 5px white;
+    font-size: 2em;    
+    background-color: #7f36d5;
+    color: white;
+    padding: 5px 10px;
+    margin: 10px;
+    list-style: none; 
+}
+  
+ 
   .nav a {
-    transition: all .5s;
-  }
-  .nav a:hover {
     color: white
   }
   
   header {
     text-align: center;
-    background: url('https://www.insuramax.com/wp-content/uploads/2018/02/Header-Contact-Louisville-Skyline-at-Night.jpg') no-repeat top center ;
-    background-size: cover;
-    overflow: hidden;
-    padding-top: 60px;
+    padding-top: 10px;
   }
   header {
     line-height: 1.5;
   }
-  header .profile-image {
-    margin-top: 50px;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    border: 3px solid white;
-    transition: all .5s;
-  }
-  header .profile-image:hover {
-    transform: scale(1.2) rotate(22deg);
-  }
-  .tag {
-    background-color: #efefef;
-    color: black;
-    padding: 10px;
-    border-radius: 5px;
-    display: table;
-    margin: 10px auto;
-  } 
-  .location {
-    background-color: #222;
-    color: white;
-  }
-  .card {
-    margin: 30px;
-    padding: 20px 40px 40px;
-    max-width: 500px;
-    text-align: left;
-    background: #fff;
-    border-bottom: 4px solid #ccc;
-    border-radius: 6px;
-  }
-  .card:hover {
-    border-color: #ff99ff;
-  }
-  
-  ul.skills {
-    padding: 0;
-    text-align: center;
-  }
-  
-  .skills li {
-    border-radius: 6px;
-    display: inline-block;
-    background: #ff9904;
-    color: white;
-    padding: 5px 10px;
-    margin: 2px;
-  }
-  
-  .skills li:nth-child(odd) {
-    background: #0399ff;
-  }
+ 
   
   footer {
     width: 100%;
@@ -128,90 +82,54 @@
     font-size: .75em;
   }
   
-  footer ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  .footer {
+    background-color: gray;  
+    color: white;
   }
-  
-  footer ul li {
-    display: inline-block;
-  }
-  
-  a.social {
-    display: inline-block;
-    text-indent: -9999px;
-    margin-left: 5px;
-    width: 30px;
-    height: 30px;
-    background-size: 30px 30px;
-    opacity: .5;
-    transition: all .25s;
-  }
-  a.twitter {
-    background-image: url(images/twitter.svg);
-  }
-  a.linkedin {
-    background-image: url(images/linkedin.svg);
-  }
-  a.github {
-    background-image: url(images/github.svg);
-  }
-  a.social:hover {
-    opacity: 1;
-  }
-  .clearfix {
-    clear: both;
-  }
-  
-  /* Styles for larger screens */
-  @media screen and (min-width: 720px) {
     
-    .flex {
-        display: flex;
-        max-width: 1200px;
-        justify-content: space-around;
-        margin: 0 auto;
-    }
-  
-    header {
-      min-height: 450px;
-    }
-  
-    .nav {
-      max-width: 1200px;
-    }
-  
-    .nav .name {
-      display: block;
-      margin-right: auto;
-      color: white;
-    }
-  
-    main {
-      padding-top: 50px;
-    }
-  
-    main p {
-      line-height: 1.6em;
-    }
-  
-    footer {
-      font-size: 1.3em;
-      max-width: 1200px;
-      margin: 40px auto;
-    }
-  
+
+
+  /* MEDIA QUERIES */
+@media (max-width: 795px){
+  /* 795px or smaller */
+.nav {
+  display: flex;
+  /* flex-wrap: wrap; */
+  flex-direction: row;
+}
+
+.img {
+  display: none;
+/* image disappears in small windows */
+}
+
+
+@media (min-width: 796px){
+  /* 796px or larger */
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+/* .container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  } */
+
+@media (min-width: 1025px){
+  /* 1025 px or larger */
+  .nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
   }
-  
-  h3{
-   color:green;
-    letter-spacing:normal;
-  }
-  
-  .card-title{
-    text-align:center;
-    border: solid black 2px;
-    border-radius: 5px;
-    padding: 15px;
-  }
+
+  /* .container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    } */
