--- a/css/styles.css
+++ b/css/styles.css
@@ -3,23 +3,26 @@
     box-sizing: border-box;
   }
     
-  html {
-    font: Arial;
-  }
-
+ 
   body {
+    font-family: 'Oswald', sans-serif;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
+    }
 
 
   header {
-    background-color:gray;
-    width: 100%;
+    background: linear-gradient(to bottom, gray, white);
+    /* width: 100%; */
     margin: 0;
     padding: 0;
 
+  }
+
+  h1, 
+  h2, 
+  h3 {
+    font-family: 'Amatic SC', cursive;
   }
 
   /*Links*/
@@ -33,18 +36,21 @@
   
   /* Section Styles */
   
-  .main-nav {
+  /* .main-nav {
     display: flex;
-    width: 100%;
     text-align: center;
-  }
+  } */
+
   .nav-logo {
+  display: flex;
   max-width: 200px;
   max-height: 200px;
   flex-grow: 1;
 }
   
   .main-nav li {
+    display: flex;
+    flex-direction: row;
     border-radius: 6px;
     box-shadow: 2px 2px 5px 2px white;
     inset: 5px white;
@@ -69,11 +75,11 @@
     line-height: 1.5;
   }
  
-  
   footer {
     width: 100%;
     min-height: 30px;
     padding: 20px 0 40px 20px;
+    background: linear-gradient(to bottom, white, gray);
   }
   
   footer .copyright {
@@ -82,19 +88,23 @@
     font-size: .75em;
   }
   
-  .footer {
+  /* .footer {
     background-color: gray;  
     color: white;
-  }
+  } */
     
-
+.carousel {
+  align-content: center;
+  padding: 2px;
+}
 
   /* MEDIA QUERIES */
 @media (max-width: 795px){
   /* 795px or smaller */
+
 .nav {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   flex-direction: row;
 }
 
