--- a/css/styles.css
+++ b/css/styles.css
@@ -16,19 +16,20 @@
     /* width: 100%; */
     margin: 0;
     padding: 0;
-
   }
 
   h1, 
   h2, 
   h3 {
     font-family: 'Amatic SC', cursive;
+    font-weight: bold;
+    padding-left: 12px;
   }
 
   /*Links*/
   
   a:visited {
-    color: white;
+    color: purple;
   }
   a:hover {
     color: #6633ff;
@@ -42,15 +43,15 @@
   } */
 
   .nav-logo {
-  display: flex;
-  max-width: 200px;
-  max-height: 200px;
-  flex-grow: 1;
+    display: flex;
+    max-width: 200px;
+    max-height: 200px;
+    flex-grow: 1;
 }
   
   .main-nav li {
     display: flex;
-    flex-direction: row;
+    flex-flow: row;
     border-radius: 6px;
     box-shadow: 2px 2px 5px 2px white;
     inset: 5px white;
@@ -62,7 +63,7 @@
     list-style: none; 
 }
   
- 
+
   .nav a {
     color: white
   }
@@ -71,15 +72,13 @@
     text-align: center;
     padding-top: 10px;
   }
-  header {
-    line-height: 1.5;
-  }
  
   footer {
     width: 100%;
     min-height: 30px;
     padding: 20px 0 40px 20px;
     background: linear-gradient(to bottom, white, gray);
+    /* position: fixed; */
   }
   
   footer .copyright {
@@ -88,24 +87,26 @@
     font-size: .75em;
   }
   
-  /* .footer {
-    background-color: gray;  
-    color: white;
-  } */
     
 .carousel {
-  align-content: center;
+  text-align: center;
   padding: 2px;
 }
 
+.body {
+  padding: 2px 15px;
+  margin: auto;
+}
   /* MEDIA QUERIES */
 @media (max-width: 795px){
   /* 795px or smaller */
 
-.nav {
+.main-nav {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  justify-content: flex-start;
+
 }
 
 .img {
@@ -116,10 +117,10 @@
 
 @media (min-width: 796px){
   /* 796px or larger */
-.nav {
+.main-nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: flex-end;
 }
 
 /* .container {
@@ -131,10 +132,10 @@
 
 @media (min-width: 1025px){
   /* 1025 px or larger */
-  .nav {
+  .main-nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: flex-start;
   }
 
   /* .container {
