--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* Global Styles */
-* { 
+/* * { 
   box-sizing: border-box;
-}
+} */
   
 body {
   font-family: 'Oswald', sans-serif;
@@ -18,7 +18,6 @@ header {
 }
 
 footer {
-  /* width: 100%; */
   min-height: 20px;
   padding: 20px;
   background: linear-gradient(to bottom, white, gray);
@@ -31,6 +30,26 @@ h3 {
   font-family: 'Amatic SC', cursive;
   font-weight: bold;
   padding-left: 12px;
+}
+
+/* Contact form */
+.contact-form {
+  max-width: 350px;
+  object-position: center;
+  margin-left: 2em;
+  margin-right: 10px;
+}
+
+input,
+textarea {
+  font-weight: 300; 
+  width: 100%;
+  border: none;
+  padding: 15px;
+  margin-bottom: 1%;
+  border-radius: 10px;
+  background-color: #E8DDFF;
+  
 }
 
 
@@ -55,15 +74,17 @@ footer .copyright {
 .nav {
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
 
 .nav-logo {
-  align-items: center;
   max-width: 200px;
+  object-position: center;
+
 }
   
 .main-nav li {
-  /* border-radius: 6px; */
+  display: block;
   box-shadow: 2px white;
   inset: 5px white;
   font-size: 2em;    
@@ -77,11 +98,13 @@ footer .copyright {
 .nav a {
   color: white
 }
-
-    
+   
 .carousel {
   text-align: center;
   padding: 4px;
+  max-width: 300px;
+  max-height: 300px;
+
 }
 
 .body {
@@ -95,6 +118,9 @@ footer .copyright {
 }
 
 
+
+
+
 /* MEDIA QUERIES */
 @media (min-width: 769px){
   /* 769px or wider */
@@ -103,7 +129,7 @@ footer .copyright {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
   }
 }
 
@@ -114,7 +140,7 @@ footer .copyright {
   .nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
   }
 
 }
