--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ h3 {
 .contact-form {
   max-width: 350px;
   object-position: center;
-  margin-left: 2em;
+  margin-left: 30%;
   margin-right: 10px;
 }
 
@@ -78,25 +78,26 @@ footer .copyright {
 }
 
 .nav-logo {
-  max-width: 200px;
-  object-position: center;
+  max-width: 175px;
 
 }
   
 .main-nav li {
-  display: block;
-  box-shadow: 2px white;
-  inset: 5px white;
-  font-size: 2em;    
-  background-color: #7f36d5;
-  color: white;
-  padding: 5px 10px;
-  margin: 10px;
-  list-style: none; 
+  list-style: none;   
 }
   
 .nav a {
-  color: white
+  box-shadow: 2px white;
+  inset: 5px white;
+  font-size: 1.75em;    
+  background-color: #7f36d5;
+  color: white;
+  padding: 5px 10px;
+  margin: 10px 5px;
+  border-radius: 5px;
+  flex-direction: column;
+  max-width: 105px;
+  text-decoration: none;
 }
    
 .carousel {
@@ -131,7 +132,16 @@ footer .copyright {
     flex-direction: row;
     /* justify-content: space-between; */
   }
+  .col1,
+  .col3 {
+    display: flex;
+    flex-direction: column;
+    flex-flow: row;
+    
+  }
+
 }
+
 
 
 @media (min-width: 1000px){
