--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,13 @@ header {
   padding: 0;
   text-align: center;
   padding-top: 10px;
+  max-height: 180px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex: 0 1 auto;
+  align-content: center;
+
 }
 
 footer {
@@ -74,23 +81,23 @@ a:hover {
  
   
 /* Class Styles */
-
 footer .copyright {
   margin-right: 20px;
   font-size: .75em;
 }
 
-.main-nav, 
+/* .main-nav, 
 .nav,
 .nav-logo {
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   flex-wrap: wrap;
   padding: 5px;
-}
+} */
 
 .nav-logo {
   max-width: 175px;
+  max-height: 175px;
 }
   
 .main-nav li {
@@ -107,7 +114,7 @@ footer .copyright {
   padding: 5px 10px;
   margin: 10px 5px;
   border-radius: 5px;
-  flex-direction: column;
+  flex-direction: row;
   max-width: 105px;
   text-decoration: none;
   flex-wrap: wrap;
@@ -122,6 +129,16 @@ footer .copyright {
   max-width: 250px;
   max-height: 250px;
   border-radius: 50%;
+}
+
+.menu-note {
+  font-size: .7em;
+  margin: 0;
+
+}
+
+ul .menu-items{
+  padding: 0;
 }
 
 /* Image Carousel */
@@ -155,6 +172,13 @@ footer .copyright {
     
   }
 
+}
+
+.menu1,
+.menu2,
+.menu3,
+.menu4 {
+  display: flexbox;
 }
 
 
