--- a/css/styles.css
+++ b/css/styles.css
@@ -49,11 +49,10 @@ h4 {
 
 /* Contact form */
 .contact-form {
-  max-width: 350px;
-  min-width: 250px;
+  min-width: 350px;
   object-position: center;
-  padding-left: 30%;
-  padding-right: 30%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 input,
@@ -134,7 +133,7 @@ footer .copyright {
 }
 
 .menu-note {
-  font-size: .7em;
+  font-size: .9em;
   margin: 0;
 
 }
@@ -173,14 +172,20 @@ ul .menu-items{
     flex-flow: row;
     
   }
-
-}
-
 .menu1,
 .menu2,
 .menu3,
 .menu4 {
   display: flexbox;
+}
+
+.contact-form {
+  max-width: 350px;
+  object-position: center;
+  margin-left: 30%;
+  margin-right: 10px;
+
+}
 }
 
 
@@ -193,7 +198,12 @@ ul .menu-items{
     flex-direction: row;
     /* justify-content: space-between; */
   }
-
+  .contact-form {
+    max-width: 350px;
+    object-position: center;
+    margin-left: 30%;
+    margin-right: 10px;
+  }
 }
 
 
