--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,6 @@ body {
   }
 
 header {
-  text-align: center;
   padding-top: 10px;
   max-height: 200px;
   display: flex;
@@ -36,12 +35,25 @@ h3,
 h4 {
   font-family: 'Amatic SC', cursive;
   font-weight: bold;
+  margin-bottom: 5px;
+  margin-top: 12px;
 }
 
 footer .copyright {
   font-size: .75em;
 }
 
+/* GRID */
+.item {
+  margin: 5px;
+}
+
+img .treat {
+  display: flex;
+  justify-self: center;
+  vertical-align: center;
+  object-position: center;
+}
 
 /*CONTACT FORM*/
 .contact-form {
@@ -54,7 +66,6 @@ footer .copyright {
 input,
 textarea {
   font-weight: 300; 
-  /* width: 100%; */
   border: none;
   padding: 15px;
   margin-bottom: 1%;
@@ -114,12 +125,13 @@ a:hover {
 .treat {
   max-width: 250px;
   max-height: 250px;
-  border-radius: 50%;
+  border-radius: 25%;
   align-self: center;
 }
 
 .treat:hover {
-  transform: scale(1.5);
+  transform: scale(1.25);
+  rotate: 35deg;
 }
 
 .menu-note {
@@ -139,84 +151,25 @@ ul .menu-items{
 }
 
 /*IMAGE CAROUSEL*/
-.carousel-wrapper {
+.carousel-container {
   overflow: hidden;
-  width: 90%;
-}
-
-.carousel {
-  transform-style: preserve-3d;
-
-}
-
-.carousel__photo {
-  opacity: 0;
-  position: absolute;
-  top:0;
-  width: 100%;
+  width: 60%;
   margin: auto;
-  max-width: 500px;
-  max-height: 500px;
-  padding: 1rem 4rem;
-  z-index: 1;
+  border: 5px solid black;
   border-radius: 25%;
-  transition: transform .5s, opacity .5s, z-index .5s;
+
 }
 
-.carousel__photo.initial,
-.carousel__photo.active {
-  opacity: 1;
-  position: relative;
-  z-index: 2;
+.carousel-slide {
+display: flex;
+width: 100%;
+max-height: 300px;
+max-width: 300px;
+transform-style: preserve-3d;
+
 }
 
-.carousel__photo.prev,
-.carousel__photo.next {
-  z-index: 3;
-}
-.carousel__photo.prev {
-  transform: translateX(-100%); /* Move 'prev' item to the left */
-}
-.carousel__photo.next {
-  transform: translateX(100%); /* Move 'next' item to the right */
-}
 
-.carousel__button--prev,
-.carousel__button--next {
-  position: absolute;
-  top:50%;
-  width: 1rem;
-  height: 1rem;
-  background-color: #FFF;
-  transform: translateY(-50%);
-  border-radius: 50%;
-  cursor: pointer; 
-  z-index: 4; /* Sit on top of everything */
-  border: 1px solid black;
-  opacity: 70%;
-}
-.carousel__button--prev {
-  left:0;
-}
-.carousel__button--next {
-  right:0;
-}
-.carousel__button--prev::after,
-.carousel__button--next::after {
-  content: " ";
-  position: absolute;
-  width: 5px;
-  height: 5px;
-  top: 50%;
-  left: 54%;
-  border-right: 2px solid black;
-  border-bottom: 2px solid black;
-  transform: translate(-50%, -50%) rotate(135deg);
-}
-.carousel__button--next::after {
-  left: 47%;
-  transform: translate(-50%, -50%) rotate(-45deg);
-}
 
 
 /*MEDIA QUERIES*/
@@ -238,18 +191,11 @@ ul .menu-items{
     justify-content: space-between;
   }
 
-  .col1,
-  .col3 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-flow: row wrap;
-  }
-
   .grid {
     display: grid;
     max-width: 1000px;
     grid-template-columns: repeat(3,1fr);
+    grid-gap: 3px;
   }
 
 }
