--- a/css/styles.css
+++ b/css/styles.css
@@ -29,10 +29,7 @@ header {
   flex-direction: row;
 }
 
-h1, 
-h2, 
-h3, 
-h4 {
+h1, h2, h3, h4 {
   font-family: 'Amatic SC', cursive;
   font-weight: bold;
   margin-bottom: 5px;
@@ -63,8 +60,7 @@ img .treat {
   margin-right: 20%;
 }
 
-input,
-textarea {
+input, textarea {
   font-weight: 300; 
   border: none;
   padding: 15px;
@@ -77,8 +73,7 @@ textarea {
   width: 100%;
 }
 
-#emailcheck,
-#phonecheck {
+#emailcheck, #phonecheck {
   margin-right: 7px;
 }
 
@@ -92,12 +87,11 @@ a:hover {
   transform: scale(2);
 }
   
- 
   
 /*NAV STYLING*/
 .nav-logo {
-  max-width: 175px;
-  max-height: 175px;
+  max-width: 200px;
+  max-height: 200px;
 }
   
 .main-nav li {
@@ -151,23 +145,69 @@ ul .menu-items{
 }
 
 /*IMAGE CAROUSEL*/
+
 .carousel-container {
-  overflow: hidden;
-  width: 60%;
+  max-width: 400px;
+  max-height: 400px;
+  position: relative;
   margin: auto;
-  border: 5px solid black;
-  border-radius: 25%;
-
 }
 
-.carousel-slide {
-display: flex;
-width: 100%;
-max-height: 300px;
-max-width: 300px;
-transform-style: preserve-3d;
-
+.mySlides {
+  max-width: 400px;
+  max-height: 400px;
 }
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px;
+}
+
+.prev {
+  left: 0;
+  border-radius: 3px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* .mySlides {display: none}
+img {vertical-align: middle;} */
+
+
+
+
+
+
 
 
 
