--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,11 @@
 }
 
 .body {
-  margin-left: 12px;
+  margin: 0 12px 0 12px
 }
+
+
+
 
 body {
   font-family: 'Oswald', sans-serif;
@@ -40,17 +43,15 @@ footer .copyright {
   font-size: .75em;
 }
 
-/* GRID */
-.item {
-  margin: 5px;
+
+
+
+/* MENU GRID */
+div .item {
+  margin: 10px;
 }
 
-img .treat {
-  display: flex;
-  justify-self: center;
-  vertical-align: center;
-  object-position: center;
-}
+
 
 /*CONTACT FORM*/
 .contact-form {
@@ -117,10 +118,9 @@ a:hover {
 
 /* MENU PAGE STYLING*/
 .treat {
-  max-width: 250px;
-  max-height: 250px;
+  width: 250px;
+  height: 250px;
   border-radius: 25%;
-  align-self: center;
 }
 
 .treat:hover {
@@ -141,22 +141,24 @@ ul .menu-items{
 
 .menu-header {
   margin-bottom: 0;
+  margin-top: 5px;
   padding-bottom: 0;
 }
 
 /*IMAGE CAROUSEL*/
 
 .carousel-container {
-  max-width: 400px;
-  max-height: 400px;
+  width: 250px;
+  height: 250px;
   position: relative;
   margin: auto;
   overflow: hidden;
 }
 
 .mySlides {
-  max-width: 400px;
-  max-height: 400px;
+  width: 250px;
+  height: 250px;
+  border-radius: 25%;
 }
 
 .prev, .next {
@@ -166,10 +168,9 @@ ul .menu-items{
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: black;
+  color: #6633ff;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
-  user-select: none;
 }
 
 .next {
@@ -183,7 +184,7 @@ ul .menu-items{
 }
 
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(255, 255, 255, 0.247);
 }
 
 .dot {
@@ -191,22 +192,18 @@ ul .menu-items{
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
+  background-color: #E8DDFF;
+  border-radius: 50%; 
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
-.active, .dot:hover {
-  background-color: #717171;
+.dot-style{
+  text-align:center;
 }
 
-/* .mySlides {display: none}
-img {vertical-align: middle;} */
-
-
-
-
+.active, .dot:hover {
+  background-color: #6633ff;
+}
 
 
 
@@ -214,12 +211,6 @@ img {vertical-align: middle;} */
 
 
 /*MEDIA QUERIES*/
-@media (max-width: 699px) {
-  .treat {
-    display: none;
-  }
-}
-
 
 @media (min-width: 700px){
   /* 700px or wider */
@@ -236,22 +227,46 @@ img {vertical-align: middle;} */
     display: grid;
     max-width: 1000px;
     grid-template-columns: repeat(3,1fr);
-    grid-gap: 3px;
+    grid-gap: 5px;
   }
 
+  .treat-mobile {
+    display: none;
+  }
+
+  div .grid-treat {
+    align-self: center;
+  }
+
+/* INDEX GRID */
+.grid-2col {
+  display: grid;
+  max-width: 1000px;
+  grid-template-columns: repeat(2,1fr);
+  grid-gap: 5px;
+}
+
+
+/* ABOUT PAGE */
+
+.about-div {
+  display: inline-block;
+}
+
+.about {
+  width: 350px;
+  height: 250px;
+  border-radius: 25%;
+  float: right;
 }
 
 
 
-@media (min-width: 1000px){
-  /* 1000px or wider */
-  .main-nav, 
-  .nav {
-    display: flex;
-    flex-direction: row;
-    /* justify-content: space-between; */
-  }
-  
+
+
+
+
 }
+
 
 
