--- a/css/styles.css
+++ b/css/styles.css
@@ -13,26 +13,22 @@
   flex: 1;
 }
 
-.body {
-  margin: 0 12px 0 12px
+..body {
+  margin-left: 12px;
 }
-
-
-
 
 body {
   font-family: 'Oswald', sans-serif;
   background-image:url(../images/baked-doodle.png);
+  font-size: 1em;
   }
 
 header {
-  padding-top: 10px;
-  max-height: 200px;
   display: flex;
   flex-direction: row;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3 {
   font-family: 'Amatic SC', cursive;
   font-weight: bold;
   margin-bottom: 5px;
@@ -44,14 +40,10 @@ footer .copyright {
 }
 
 
-
-
 /* MENU GRID */
 div .item {
   margin: 10px;
 }
-
-
 
 /*CONTACT FORM*/
 .contact-form {
@@ -74,8 +66,8 @@ input, textarea {
   width: 100%;
 }
 
-#emailcheck, #phonecheck {
-  margin-right: 7px;
+#submit{
+  margin-top: 15px;
 }
 
 
@@ -125,7 +117,6 @@ a:hover {
 
 .treat:hover {
   transform: scale(1.25);
-  rotate: 35deg;
 }
 
 .menu-note {
@@ -197,6 +188,7 @@ ul .menu-items{
   display: inline-block;
   transition: background-color 0.6s ease;
 }
+
 .dot-style{
   text-align:center;
 }
@@ -234,37 +226,13 @@ ul .menu-items{
     display: none;
   }
 
-  div .grid-treat {
-    align-self: center;
+  /* INDEX GRID */
+  .grid-2col {
+    display: grid;
+    max-width: 900px;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 5px;
   }
-
-/* INDEX GRID */
-.grid-2col {
-  display: grid;
-  max-width: 1000px;
-  grid-template-columns: repeat(2,1fr);
-  grid-gap: 5px;
-}
-
-
-/* ABOUT PAGE */
-
-.about-div {
-  display: inline-block;
-}
-
-.about {
-  width: 350px;
-  height: 250px;
-  border-radius: 25%;
-  float: right;
-}
-
-
-
-
-
-
 
 }
 
