--- a/css/styles.css
+++ b/css/styles.css
@@ -7,14 +7,11 @@
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  margin: 15px;
 }
 
 .content {
   flex: 1;
-}
-
-..body {
-  margin-left: 12px;
 }
 
 body {
